# motion-planning

./: README.md
src/controllers/: CMakeLists.txt  package.xml
src/controllers/src/: diff_drive_publisher.cpp
src/diff_drive_control/: CMakeLists.txt  package.xml
src/diff_drive_control/config/: config.yaml  diff_drive_brain.yaml  diff_pid.yaml  my_world.sdf  robot-config.rviz  rwd_diff_controller.yaml
src/diff_drive_control/launch/: gazebo.launch  launch.sh  launch_ctrl.sh  launch_pth.sh  rviz_rwd.launch.py  rwd.launch.py
src/diff_drive_control/src/: diff_drive_brain.cpp  diff_drive_publisher.cpp  diff_mp.cpp  diff_pid.cpp  localization.cpp
src/diff_drive_control/src/controls/: diff_mp.cpp  diff_pid.cpp  diff_pid_profiler.cpp
src/diff_drive_control/src/controls/include/: types.h
src/diff_drive_control/src/path_following/: create_map.cpp  pure_pursuit.py
src/diff_drive_control/urdf/: imu.xacro  lidar.xacro  my_world.sdf  rwd.sdf  rwd.xacro  wheel.xacro
src/robot/: CMakeLists.txt  package.xml
src/robot/launch/: display.launch.py
src/robot/urdf/: _4w_bot.xacro  four_wheel_robot.xacro  robot.urdf  wheel.xacro
src/test_diff_drive_ctrl/: CMakeLists.txt  package.xml
src/test_diff_drive_ctrl/config/: diff_drive_controller.yaml
src/test_diff_drive_ctrl/launch/: diff_drive.launch.py
src/test_diff_drive_ctrl/src/: example_diff_drive.cpp
ui/path_track/: path_tracking_simulator.py  path_tracking_simulator.ui  path_tracking_simulator_window.py  ui_simulator_params.yaml
ui/path_vis/: path_visualization.ui  path_visualization_simulator.py  path_visualization_window.py
